<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/download"
    tools:context=".Main3Activity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="122dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="40dp"
        android:text="@string/choose_location" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="247dp"
        android:text="@string/City" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="233dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:hint="@string/enter_city_name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginBottom="168dp"
        android:text="@string/Location" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editText2"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:hint="@string/enter_your_location"
        android:inputType="textPersonName"
        android:text="@string/ed" />

    <Button
        android:id="@+id/but4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView6"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginBottom="28dp"
        android:text="@string/NEXT" />


</RelativeLayout>