<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/download"
    tools:context=".Main4Activity">

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="51dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="235dp"
        android:ems="10"
        android:hint="@string/referralcode"
        android:inputType="textPersonName"
        android:text="@string/Name" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editText4"
        android:layout_marginBottom="221dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editText4"
        android:layout_marginBottom="137dp"
        android:ems="10"
        android:hint="@string/referralcode"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/but3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="64dp"
        android:layout_marginLeft="119dp"
        android:layout_marginStart="119dp"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:text="@string/by_signing_i_agree_the_t_and_c" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="150dp"
        android:layout_height="159dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:layout_alignLeft="@+id/textView9">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/textView9"
            android:layout_alignStart="@+id/textView9"
            android:layout_alignTop="@+id/rb2"
            android:layout_weight="1"
            android:text="@string/Male" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="111dp"
            android:layout_toEndOf="@+id/button2"
            android:layout_toRightOf="@+id/button2"
            android:layout_weight="1"
            android:text="@string/female" />
    </RadioGroup>


</RelativeLayout>